--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,9 @@ jobs:
       - name: Initialize Google Cloud SDK
         uses: zxyle/publish-gae-action@master
         with:
-          service_account_email: ${{ secrets.SERVICE_ACCOUNT_EMAIL_GT1 }}
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_GT1 }}
-          project_id: ${{ secrets.PROJECT_ID_GT1 }}
+          service_account_email: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+          project_id: ${{ secrets.PROJECT_ID }}
           # An optional variables parameter can be used
           #gae_variables: ${{ secrets.GAE_VARIABLES1 }}
           gae_config_path: './app.yaml'
@@ -25,6 +25,6 @@ jobs:
       - name: Publish app to Google App Engine
         run: |
           # This client-secret.json is converted by GCP_SA_KEY.
-          gcloud auth activate-service-account ${{ secrets.SERVICE_ACCOUNT_EMAIL_GT1 }} --key-file=client-secret.json
-          gcloud config set project ${{ secrets.PROJECT_ID_GT1 }}
+          gcloud auth activate-service-account ${{ secrets.SERVICE_ACCOUNT_EMAIL }} --key-file=client-secret.json
+          gcloud config set project ${{ secrets.PROJECT_ID }}
           gcloud -q app deploy app_gt.yaml --promote
